--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^1.19.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.2"
   }
 }
